--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 <div>Learning Web Design &amp; Development through tutorials, courses and books - HTML5, CSS3, JavaScript, mobile app development, Responsive Web Design</div>
 <div><h2><a href="http://gipsi.itbit.me/index.html">Home</a></h2></div>
 </body>
+    <footer>
+        <a href="https://github.com/gipsi/gipsi.github.io">View on GitHub</a>
+    </footer>
 <script src="js/app.js"></script>
 </html>
