--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<div><h1><b>gipsi.github.io</b></h1></div>
-<div>Learning Web Design &amp; Development through tutorials, courses and books - HTML5, CSS3, JavaScript, mobile app development, Responsive Web Design</div>
-<div><h2><a href="http://gipsi.itbit.me/index.html">Home</a></h2></div>
- <div> <a href="https://github.com/gipsi/gipsi.github.io">View on GitHub</a></div>  
+  <div class="flex-container">
+    <div><h1><b>gipsi.github.io</b></h1></div>
+      <div>Learning Web Design &amp; Development through tutorials, courses and books - HTML5, CSS3, JavaScript, mobile app development, Responsive Web Design</div>
+        <div><h2><a href="http://gipsi.itbit.me/index.html">Home</a></h2></div>
+          <div> <a href="https://github.com/gipsi/gipsi.github.io">View on GitHub</a></div>  
+    </div>     
 </body>
 
 <script src="js/app.js"></script>
