--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div><h1><b>gipsi.github.io</b></h1></div>
     <div><p>Learning Web Design &amp; Development through tutorials, courses and books - HTML5, CSS3, JavaScript, mobile app development, Responsive Web Design</p></div>
-    <div><h2><a href="http://gipsi.itbit.me/index.html">Home</a></h2></div>
+    <div><h2><a href="http://gipsi.itbit.me/index.html">gipsi.itbit.me</a></h2></div>
     <div> <a href="https://github.com/gipsi/gipsi.github.io">View on GitHub</a></div>       
 </body>
 
