--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <div><h1><b>gipsi.github.io</b></h1></div>
-    <div><p>Learning Web Design &amp; Development through tutorials, courses and books - HTML5, CSS3, JavaScript, mobile app development, Responsive Web Design</p></div>
+    <div><p>Learning Web Design &amp; Development through tutorials, courses and books - HTML5, CSS3, JavaScript,
+        mobile app development, Responsive Web Design</p></div>
     <div><h2><a href="http://gipsi.itbit.me/index.html">blog</a></h2></div>
-    <div><p>This is my first attempt at coding and implementing a Web Service Worker to make my blog available in the browser when offline.</p></div>
+    <div><h3>A first attempt at coding and implementing a Web Service Worker to make my blog available in 
+        the browser when offline.</h3></div>
     
     <div> <a href="https://github.com/gipsi/gipsi.github.io">View on GitHub</a></div>       
 </body>
