--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div><h1><b>gipsi.github.io</b></h1></div>
     <div><p>Learning Web Design &amp; Development through tutorials, courses and books - HTML5, CSS3, JavaScript,
         mobile app development, Responsive Web Design</p></div>
-    <div><h3>A first attempt at coding and implementing a Web Service Worker to make my blog available in 
-        the browser when offline.</h3></div>
+    <div><p>A first attempt at coding and implementing a Web Service Worker to make my blog available in 
+        the browser when offline.</p></div>
     <div><h2><a href="http://gipsi.itbit.me/index.html">blog</a></h2></div>
     <div>
         <blockquote>Service workers essentially act as proxy servers that sit between web applications, and the browser and network (when available). They are intended to (amongst other things) enable the creation of effective offline experiences, intercepting network requests and taking appropriate action based on whether the network is available and updated assets reside on the server. They will also allow access to push notifications and background sync APIs.
