--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div> <a href="https://github.com/gipsi/gipsi.github.io">View on GitHub</a></div> 
-    <div><h1><b>gipsi.github.io</b></h1></div>
+    <div><h1>gipsi.github.io</h1></div>
     <div><p>Learning Web Design &amp; Development through tutorials, courses and books - HTML5, CSS3, JavaScript,
         mobile app development, Responsive Web Design</p></div>
     <div><p>A first attempt at coding and implementing a Web Service Worker to make my blog available in 
