--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+	<div>
+	<p>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+</p>
+	</div>
+	
     <div> <a href="https://github.com/gipsi/gipsi.github.io">View on GitHub</a></div> 
     <div><h1>gipsi.github.io</h1></div>
     <div><p>Learning Web Design &amp; Development through tutorials, courses and books - HTML5, CSS3, JavaScript,
@@ -25,13 +35,7 @@
 </div>
 
 
-<p>
-    <a href="http://jigsaw.w3.org/css-validator/check/referer">
-        <img style="border:0;width:88px;height:31px"
-            src="http://jigsaw.w3.org/css-validator/images/vcss"
-            alt="Valid CSS!" />
-    </a>
-</p>
+
             
 </body>
 <script src="js/app.js"></script>
