--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 	<header>
-<h1>Bemused Unicorn</h1>
-<h1><img src="white_pony.png.jpg" alt="White apony"/></h1>
+
+<h1><img src="" alt="Bemused Unicorn"/></h1>
 <nav>
 <li><a href="#content">Content</a></li>
 <li><a href="#details">Details</a></li>
