--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ p {
 	
 <header>
 
-<h1><img src="images/bemused_unicorn.jpg" alt="Bemused Unicorn"/></h1>
+<h1><img src="images/bemused_unicorn(2).jpg" alt="Bemused Unicorn"/></h1>
   <nav>
     <li><a href="#content">Content</a></li>
     <li><a href="#details">Details</a></li>
