--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	
     <link rel="manifest" href="/manifest.json">
     <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/styles.css">
-<!--	
+ <!--   <link rel="stylesheet" href="css/styles.css"> -->
+	
 <style>
   body {
   color: maroon;
@@ -28,14 +28,14 @@ p {
   font-weight: bold;
   
 </style>
--->	
+	
 </head>
 	
 <body>
 	
 <header>
 
-<h1><img src="images/bemused_unicorn(2).jpg" alt="Bemused Unicorn"/></h1>
+<h1><img src="bemused_unicorn (2).jpg" alt="Bemused Unicorn"/></h1>
   <nav>
     <li><a href="#content">Content</a></li>
     <li><a href="#details">Details</a></li>
