--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="/manifest.json">
     <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
  <!--   <link rel="stylesheet" href="css/styles.css"> -->
-	
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
 <style>
   body {
   color: maroon;
