--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ p {
 <div id="grid">
   <div>	  
     <header>
+	    
+	    <h2>View code on <a href="https://github.com/gipsi/gipsi.github.io?files=1>gipsi.github.io</a>
       <h1><img src="bemused_unicorn (2).jpg" alt="Bemused Unicorn"/></h1>
         <nav>
           <li><a href="#content">Content</a></li>
