--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ p {
 	
           <p>A first attempt at coding and implementing a Web Service Worker to make my blog 
              available in the browser when offline.
-             blog
+		  <a href="http://gipsi.itbit.me/PWA/index.html">blog</a>
           </p>
       </article>
     </div>
