--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ p {
   <div>	  
     <header>
 	    
-	    <h2>View code on <a href="https://github.com/gipsi/gipsi.github.io?files=1">GitHub</a>
+	    <h2>View on <a href="https://github.com/gipsi/gipsi.github.io?files=1">GitHub</a>
       <h1><img src="bemused_unicorn (2).jpg" alt="Bemused Unicorn"/></h1>
         <nav>
           <li><a href="#content">Content</a></li>
