--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   body {
   color: maroon;
   background: orange fixed;
-  background-image:url("Service_worker.jpg");
+  background-image:url("background.jpg");
 }
 	
   #grid {
