--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ p {
     <header>
 	    
 	    <h2>View Source Code on <a href="https://github.com/gipsi/gipsi.github.io?files=1">GitHub</a>
-      <h1><img src="bemused_unicorn (2).jpg" alt="Bemused Unicorn"/></h1>
+      <h1><img src="bemusedunicorn.jpg" alt="Bemused Unicorn"/></h1>
         <nav>
           <li><a href="#content">Content</a></li>
           <li><a href="#details">Details</a></li>
@@ -78,9 +78,8 @@ p {
              Semantic HTML, some CSS styling and touch of JavaScript functionality..
           </p>
 	
-          <p>A first attempt at coding and implementing a Web Service Worker to make my blog 
-             available in the browser when offline.
-		  <a href="http://gipsi.itbit.me/PWA/index.html">blog</a>
+          <p>A first attempt at coding and implementing a Web Service Worker to make my 
+		  <a href="http://gipsi.itbit.me/PWA/index.html">blog</a> available in the browser when offline.
           </p>
       </article>
     </div>
