--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Bemused Unicorn</title>
 <style>
 body {
+  display: flex;
   color: maroon;
   background: orange fixed;
   background-image:url("Service_worker.jpg");
@@ -30,6 +31,7 @@ p {
 <header>
 <h1>Bemused Unicorn</h1>
 <h2>gipsi.github.io</h2>
+<h3>View source code on: <a href="https://github.com/gipsi/gipsi.github.io/edit/master/index.html">GitHub</a></h3>  
 <h1><img src="white_pony.png.jpg" alt="White pony"/></h1>
 
 <blockquote>
