--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Bemused Unicorn</title>
 <style>
 body {
-  display: flex;
+  display: inline-flex;
   color: maroon;
   background: orange fixed;
   background-image:url("Service_worker.jpg");
