--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 <title>Bemused Unicorn</title>
 <style>
+ * {
+ display: flex; 
+  }
+  
 body {
-  display: inline-flex;
   color: maroon;
   background: orange fixed;
   background-image:url("Service_worker.jpg");
