--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  
     <h2>gipsi.github.io</h2>
  
-    <h3>View source code on: <a href="https://github.com/gipsi/gipsi.github.io/edit/master/index.html">GitHub</a></h3>  
+    <h3>View source code on: <a href="https://github.com/gipsi/gipsi.github.io">GitHub</a></h3>  
  
     <h1><img src="white_pony.png.jpg" alt="White pony"/></h1>
 
