--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <style>
  
     body {
-      color: maroon;
-      background: orange fixed;
-      background-image:url("Service_worker.jpg");
+      color: lavender;
+      background: darkslateblue fixed;
+      /*background-image:url("Service_worker.jpg");*/
       }
 
     h1 {
