--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <style>
  
     body {
-      color: maroon;
-      background: orange fixed;
-      background-image:url("Service_worker.jpg");
+      color: lavender;
+      background: darkslateblue fixed;
+      /*background-image:url("Service_worker.jpg");*/
       }
 
     h1 {
-      color: maroon; 
+      color: lavender; 
       }
    
     p {
@@ -39,9 +39,9 @@
  
   <header>
  
-    <h1>Bemused Unicorn</h1>
+    <h1>Bemused Unicorn </h1>
  
-    <h2>gipsi.github.io</h2>
+    <h2><a href="https://gipsi.github.io">gipsi.github.io</a></h2>
  
     <h3>View source code on: <a href="https://github.com/gipsi/gipsi.github.io">GitHub</a></h3>  
  
