--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
  
     <h3>View source code on: <a href="https://github.com/gipsi/gipsi.github.io">GitHub</a></h3>  
  
-    <h1><img src="white_pony.png.jpg" alt="White pony"/></h1>
+    <h1><img src="bemused_unicorn (2).jpg" alt="White pony"/></h1>
 
     <blockquote>
       <p>
