--- a/index.html
+++ b/index.html
@@ -30,7 +30,26 @@
      background-color: rgb(137, 224, 160);
      background-color: rgba(180, 246, 248, .43);
      font-weight: bold;
-     }   
+     }
+     /* unvisited link */
+a:link {
+  color: red;
+}
+
+/* visited link */
+a:visited {
+  color: green;
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+a:active {
+  color: blue;
+} 
   </style>
 
 </head>
