--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
  
   <style>
  
-    body {
+    body, h1, p, nav {
       color: lavender;
       background: darkslateblue fixed;
       /*background-image:url("Service_worker.jpg");*/
       }
 
-    h1 {
+   /* h1 {
       color: lavender; 
       }
    
@@ -30,7 +30,7 @@
      background-color: rgb(137, 224, 160);
      background-color: rgba(180, 246, 248, .43);
      font-weight: bold;
-     }
+     }*/
      /* unvisited link */
 a:link {
   color: red;
