--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
  
   <style>
  
-    body {
+    body,h1, p, nav {
       color: lavender;
       background: darkslateblue fixed;
       /*background-image:url("Service_worker.jpg");*/
       }
 
-    h1 {
+   /*h1 {
       color: lavender; 
       }
    
@@ -30,7 +30,7 @@
      background-color: rgb(137, 224, 160);
      background-color: rgba(180, 246, 248, .43);
      font-weight: bold;
-     }   
+     }*/   
   </style>
 
 </head>
@@ -43,7 +43,7 @@
  
     <h2><a href="https://gipsi.github.io">gipsi.github.io</a></h2>
  
-    <h3>View source code on: <a href="https://github.com/gipsi/gipsi.github.io">GitHub</a></h3>  
+    <h3>View source code on: <a href="https://github.com/gipsi/serviceworker">GitHub</a></h3>  
  
     <h1><img src="bemused_unicorn (2).jpg" alt="White pony"/></h1>
 
