--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     body,h1, p, nav {
       color: lavender;
       background: darkslateblue fixed;
+      overflow-wrap: break-word;
       /*background-image:url("Service_worker.jpg");*/
       }
 
@@ -30,7 +31,9 @@
      background-color: rgb(137, 224, 160);
      background-color: rgba(180, 246, 248, .43);
      font-weight: bold;
-     }*/   
+     }*/ 
+    margin {
+    width: 20px}
   </style>
 
 </head>
