--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ a:active {
  
     <h2>gipsi.github.io</h2>
  
-    <h3>View source code on: <a href="https://gipsi.github.io/service-worker/">GitHub</a></h3>  
+    <h3>View source code on: <a href="https://github.com/gipsi/service-worker/">GitHub</a></h3>  
  
    <!-- <h1><img src="white_pony.png.jpg" alt="White pony"/></h1>-->
 
