--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@ a:active {
   <header>
  
     <h1>Bemused Unicorn</h1>
+    
+    <h2>A service worker website</h2>
  
-    <h2>gipsi.github.io</h2>
+    <h3>by gipsi.github.io - more happenings at<a href="https://gipsi.github.io/">weblog</a></h2>
  
     <h3>View source code on: <a href="https://github.com/gipsi/service-worker/">GitHub</a></h3>  
  
