--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ a:active {
     
     <h2>A service worker website</h2>
  
-    <h3>by gipsi.github.io - more happenings at<a href="https://gipsi.github.io/">weblog</a></h2>
+    <h3>More happenings at<a href="https://gipsi.github.io/">gipsi.github.io</a>weblog</h2>
  
     <h3>View source code on: <a href="https://github.com/gipsi/service-worker/">GitHub</a></h3>  
  
