--- a/index.html
+++ b/index.html
@@ -196,8 +196,9 @@ a:active {
   </blockquote>
  
   <footer>
-    <p id="copyright">&copy;2017 Gipsi. All Rights Reserved.</p>
+    <p id="copyright">&copy;2017 </p>
     <p>Bemused Unicorn is a <a rel="me" href="http://gipsi.itbit.me">gipsi.itbit.me</a> project.</p>
+    <h3>More happenings at <a href="https://gipsi.github.io/">gipsi.github.io</a> weblog</h2>
   </footer>
  
 </body> 
