--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ a:active {
   </blockquote>
  
   <footer>
-    <p id="copyright">&copy;2017 </p>
+    <p id="copyright">gipsi  ♻️ 2017 </p>
     <p>Bemused Unicorn is a <a rel="me" href="http://gipsi.itbit.me">gipsi.itbit.me</a> project.</p>
     <h3>More happenings at <a href="https://gipsi.github.io/">gipsi.github.io</a> weblog</h2>
   </footer>
