--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Bemused Unicorn</title>
+  
+  <link rel="manifest" href="/manifest.json">
  
   <style>
  
@@ -33,17 +35,17 @@
      }*/
      /* unvisited link */
 a:link {
-  color: red;
+  color: hotpink;
 }
 
 /* visited link */
 a:visited {
-  color: green;
+  color: cornflowerblue;
 }
 
 /* mouse over link */
 a:hover {
-  color: hotpink;
+  color: lightseagreen;
 }
 
 /* selected link */
@@ -200,6 +202,27 @@ a:active {
   </footer>
  
 </body> 
+
+<script>
+// This is the "Offline page" service worker
+
+// Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
+
+// Check compatibility for the browser we're running this in
+if ("serviceWorker" in navigator) {
+  if (navigator.serviceWorker.controller) {
+    console.log("[PWA Builder] active service worker found, no need to register");
+  } else {
+    // Register the service worker
+    navigator.serviceWorker
+      .register("pwabuilder-sw.js", {
+        scope: "./"
+      })
+      .then(function (reg) {
+        console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+      });
+  }
+}
+</script>
  
 </html>
-
