--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Bemused Unicorn</title>
   
   <link rel="manifest" href="/manifest.json">
+  <link rel="service-worker" href="/pwabuilder-sw.js">
   
   <style>
  
