--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <title>Bemused Unicorn</title>
   
   <link rel="manifest" href="/manifest.json">
-  <link rel="service-worker" href="/service-worker.js">
+  <link rel="pwabuilder" href="/pwabuilder-sw.js">
+  <link rel="pwabuilder-register" href="/pwabuilder-sw-register.js">
   
   <style>
  
