--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Bemused Unicorn</title>
+  <script>
+    // CODELAB: Register service worker.
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/service-worker.js')
+        .then((reg) => {
+          console.log('Service worker registered.', reg);
+        });
+  });
+}
+  </script>
   
   <link rel="manifest" href="/manifest.json">
-  <link rel="pwabuilder" href="/pwabuilder-sw.js">
-  <link rel="pwabuilder-register" href="/pwabuilder-sw-register.js">
+  
   
   <style>
  
