--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Bemused Unicorn</title>
+  
+    <link rel="manifest" href="/manifest.json">
+    <link rel="service-worker" href="/service-worker.js">
+  
   <script>
     // CODELAB: Register service worker.
 if ('serviceWorker' in navigator) {
@@ -18,9 +22,7 @@ if ('serviceWorker' in navigator) {
   });
 }
   </script>
-  
-  <link rel="manifest" href="/manifest.json">
-  
+
   
   <style>
  
