--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@ if ('serviceWorker' in navigator) {
       background-color: rgb(137, 224, 160);
       background-color: rgba(180, 246, 248, .43);
       font-weight: bold;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 200px;
       }  
    
    nav {
