--- a/index.html
+++ b/index.html
@@ -70,12 +70,19 @@ a:hover {
 a:active {
   color: lightgreen;
 } 
+    
+    div {
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+}
   </style>
 
 </head>
  
 <body>
- 
+ <div>
   <header>
  
     <h1>Bemused Unicorn</h1>
@@ -218,7 +225,7 @@ a:active {
     <p>Bemused Unicorn is a <a rel="me" href="http://gipsi.itbit.me">gipsi.itbit.me</a> project.</p>
     <h3>More happenings at <a href="https://gipsi.github.io/">gipsi.github.io</a> weblog</h2>
   </footer>
- 
+  </div>
 </body> 
 
 
