--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ if ('serviceWorker' in navigator) {
  
     body, h1, p, nav {
       color: lavender;
-      background: darkslateblue fixed;
+      background: darkslategray fixed;
       /*background-image:url("Service_worker.jpg");*/
       }
 
