--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
  
   <style>
  
-    body,h1, p, nav {
-      color: lavender;
-      background: darkslateblue fixed;
+    body {
+      color: maroon;
+      background: orange fixed;
       overflow-wrap: break-word;
-      /*background-image:url("Service_worker.jpg");*/
+      background-image:url("Service_worker.jpg");
       }
 
-   /*h1 {
-      color: lavender; 
+   h1 {
+      color: maroon; 
       }
    
     p {
@@ -31,7 +31,7 @@
      background-color: rgb(137, 224, 160);
      background-color: rgba(180, 246, 248, .43);
      font-weight: bold;
-     }*/ 
+     }*
     margin {
     width: 20px}
   </style>
@@ -48,7 +48,7 @@
  
     <h3>View source code on: <a href="https://github.com/gipsi/serviceworker">GitHub</a></h3>  
  
-    <h1><img src="bemused_unicorn (2).jpg" alt="White pony"/></h1>
+    <h1><img src="white_pony.png.jpg" alt="White pony"/></h1>
 
     <blockquote>
       <p>
@@ -185,4 +185,3 @@
 </body> 
  
 </html>
-
